add notes for QTBUG-69963