ProjectTemplate/quick_main.cpp
@@ -10,7 +10,8 @@ int main(int argc, char *argv[])
 	QCoreApplication::setAttribute(Qt::AA_EnableHighDpiScaling);
 	// If you want to support file dialogs on platforms other then android, use a QApplication instead (and add QT += widgets to the pro file)
 	QGuiApplication app(argc, argv);
-
+	
+	QtMvvm::QuickPresenter::getInputViewFactory(); //Workaround for QTBUG-69963
 	qmlRegisterUncreatableType<%{VmCn}>("com.example.%{ProjectLowerName}", 1, 0, "%{VmCn}", "ViewModels cannot be created!");
 	
 	QQmlApplicationEngine engine;
